--- a/hypr/config/configs/Keybinds.conf
+++ b/hypr/config/configs/Keybinds.conf
@@ -75,11 +75,11 @@ bindd = $mainMod CTRL, F12, move workspace to down monitor, movecurrentworkspace
 
 
 #### SYSTEM ####
-bindd = CTRL ALT, Delete, exit Hyprland, exec, hyprctl dispatch exit 0
+# bindd = CTRL ALT, Delete, exit Hyprland, exec, hyprctl dispatch exit 0
 bindd = $mainMod, Q, close active window, killactive,
 bindd = $mainMod SHIFT, Q, Terminate active process, exec, $scriptsDir/KillActiveProcess.sh
-bindd = CTRL ALT, L, lock screen, exec, $scriptsDir/LockScreen.sh
-bindd = CTRL ALT, P, powermenu, exec, $scriptsDir/Wlogout.sh
+bindd = $mainMod, L, lock screen, exec, $scriptsDir/LockScreen.sh
+# bindd = CTRL ALT, P, powermenu, exec, $scriptsDir/Wlogout.sh
 bindd = $mainMod SHIFT, N, notification panel, exec, swaync-client -t -sw
 bindd = $mainMod SHIFT, E, Quick settings menu, exec, $scriptsDir/Kool_Quick_Settings.sh
 
@@ -126,7 +126,7 @@ bindld = , xf86audiostop, stop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # Screenshot keybindings NOTE: You may need to press Fn key as well
 bindd = $mainMod, Print, screenshot now, exec, $scriptsDir/ScreenShot.sh --now
-bindd = $mainMod SHIFT, Print, screenshot (area), exec, $scriptsDir/ScreenShot.sh --area
+bindd = CTRL, Print, screenshot (area), exec, $scriptsDir/ScreenShot.sh --area
 bindd = $mainMod CTRL, Print, screenshot in 5s, exec, $scriptsDir/ScreenShot.sh --in5
 bindd = $mainMod CTRL SHIFT, Print, screenshot in 10s, exec, $scriptsDir/ScreenShot.sh --in10
 bindd = ALT, Print, screenshot active window, exec, $scriptsDir/ScreenShot.sh --active
