--- a/hypr/config/configs/Keybinds.conf
+++ b/hypr/config/configs/Keybinds.conf
@@ -83,6 +83,9 @@ bindd = $mainMod, L, lock screen, exec, $scriptsDir/LockScreen.sh
 bindd = $mainMod SHIFT, N, notification panel, exec, swaync-client -t -sw
 bindd = $mainMod SHIFT, E, Quick settings menu, exec, $scriptsDir/Kool_Quick_Settings.sh
 
+# System Update
+bindd = $mainMod ALT, U, update system, exec, $term -e $HOME/dotfiles/bin/fedora-update
+
 # Master Layout
 bindd = $mainMod CTRL, D, remove master, layoutmsg, removemaster
 bindd = $mainMod, I, add master, layoutmsg, addmaster
